vlib/v/checker/tests/arrow_op_newline_stmt_err.vv
fn main() {
	ch := chan bool{}
	write() or {
		// keep the `or` block multiline so the receive starts on a later line
		ch <- false
	}
	<-ch
}

fn write() ! {}
